--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2"
+    "@testing-library/react": "^11.2.2",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   }
 }
